--- a/src/Main/inises.form
+++ b/src/Main/inises.form
@@ -175,9 +175,12 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Aceptar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="accActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="160" y="390" width="-1" height="-1"/>
+          <AbsoluteConstraints x="190" y="380" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
