--- a/src/Main/tab19.form
+++ b/src/Main/tab19.form
@@ -4994,14 +4994,14 @@
     <Component class="javax.swing.JLabel" name="timer">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="UD Digi Kyokasho N-B" size="24" style="0"/>
+          <Font name="UD Digi Kyokasho N-B" size="72" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="jLabel10"/>
+        <Property name="text" type="java.lang.String" value="#"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="800" y="240" width="190" height="40"/>
+          <AbsoluteConstraints x="800" y="240" width="190" height="100"/>
         </Constraint>
       </Constraints>
     </Component>
