--- a/src/Main/Victory.form
+++ b/src/Main/Victory.form
@@ -74,10 +74,10 @@
     <Component class="javax.swing.JLabel" name="omedetou">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="UD Digi Kyokasho N-B" size="24" style="0"/>
+          <Font name="UD Digi Kyokasho N-B" size="22" style="0"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="&#x9ed2;&#x3055;&#x3093;&#x3001;&#x304a;&#x3081;&#x3067;&#x3068;&#x3046;&#x3054;&#x3056;&#x3044;&#x307e;&#x3059;&#xff01;&#xff01;"/>
+        <Property name="text" type="java.lang.String" value="###############&#x3055;&#x3093;&#x3001;&#x304a;&#x3081;&#x3067;&#x3068;&#x3046;&#x3054;&#x3056;&#x3044;&#x307e;&#x3059;&#xff01;&#xff01;"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
